# ui-test

./: .gitignore  .gitmodules  README.md  main.py  pyproject.toml  randomize.py
goryagin_da/: README.MD
ishmanov_tf/: README.md  pyproject.toml
ishmanov_tf/calc/: __main__.py  entry.py
ishmanov_tf/calc/gui/: action.py  application.py  widgets.py
ishmanov_tf/covid/: README.md
kiselev_vg/: README.md  main.py  pyproject.toml
kostitsyina_ad/: README.md  hierarchical.py
markushina_la/calc/: README.md  app.py
markushina_la/calc/calc/: widgets.py
markushina_la/tree_viewer/tree_viewer/: __main__.py
polyakova_kp/: README.md  design.ui  main.py  pyproject.toml
ragrin_dr/: .gitignore  README.md
ragrin_dr/Calculator/: Calculator.vcxproj.filters  imgui.ini
ragrin_dr/Calculator/src/: Programm.cpp  Programm.h
shanturov_mv/: setup.py
shanturov_mv/calculator/: calculator_app.py  entry_with_placeholder.py
shanturov_mv/calculator_package/: README.md
shanturov_mv/calculator_package/calculator/: calculator_app.py  custom_button.py
sharifullin_af/: main.py
success/goryagin_da/: README.MD  ui_main.py
success/ishmanov_tf/covid/: pyproject.toml
success/ishmanov_tf/covid/covid/: main.py
success/kiselev_vg/: setup.py
success/kostitsyina_ad/: README.md
success/markushina_la/calc/: README.md  pyproject.toml
success/markushina_la/calc/calc/: __main__.py  entry.py
success/markushina_la/tree_viewer/: README.md
success/ragrin_dr/Calculator/: Calculator.sln  Calculator.vcxproj  main.cpp
success/zvyagina_mo/calculate/: pyproject.toml
(+7 files in other folders)
