[tool.poetry]
name = "calc"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.6.1"


[tool.poetry.scripts]
calc = "calc.entry:help"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
