[tool.poetry]
name = "kv_calc"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt5 = "5.15.2"

[tool.poetry.scripts]
draw = "main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"